--- a/style.css
+++ b/style.css
@@ -2,4 +2,86 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+nav {
+  padding: 30px;
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0.4);
+}
+
+nav ul {
+  display: flex;
+  max-width: 800px;
+  justify-content: space-around;
+}
+
+nav ul li:last-child {
+  background-color: rgba(51, 51, 51, 0.8);
+  padding: 0 30px;
+  color: white;
+}
+
+.first-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  height: 50vh;
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.first-container article {
+  padding-top: 30px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.first-container article:first-child {
+  background-color: rgba(51, 51, 51, 0.6);
+}
+
+.first-container article:nth-child(2) {
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.first-container article:nth-child(3) {
+  background-color: rgba(51, 51, 51, 0.55);
+}
+
+.first-container article:last-child {
+  background-color: rgba(51, 51, 51, 0.4);
+}
+
+.second-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  height: auto;
+}
+
+.second-container article {
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: rgba(51, 51, 51, 0.3);
+}
+
+.second-container article h1 {
+  padding: 10px 0;
+}
+
+.second-container article:hover {
+  background-color: #777;
+  transform: scale(1.05) translateY(-10px);
+  z-index: 100;
+  transition: 0.25s ease all;
 }
