--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ nav ul li:last-child {
 .first-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 50vh;
+  height: 80vh;
   grid-template-rows: repeat(2, 1fr);
 }
 
@@ -84,4 +84,42 @@ nav ul li:last-child {
   transform: scale(1.05) translateY(-10px);
   z-index: 100;
   transition: 0.25s ease all;
+}
+.third-section {
+  display: flex;
+ flex-direction: row;
+}
+.banner-section {
+  padding-top: 7rem;
+  height: 80vh;
+  width: 250rem;
+  border: solid 1px black;
+  background-color: rgba(51, 51, 51, 0.7);
+  text-align: center;
+  border-radius: 0.8rem;
+}
+.post-section {
+  padding-top: 7rem;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 80vh;
+  background-color: rgba(51, 51, 51, 0.5);
+  text-align: center;
+}
+.post-section:hover {
+  background-color: #666;
+  transform: scale(1.05) translateY(-10px);
+  z-index: 100;
+  transition: 0.25s ease all;
+}
+.fourth-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 12px;
+}
+.fourth-container article {
+  width:  100%;
+  margin-left: 2rem;
+  padding-top: 2rem;
 }
