Add style to 6th section

--- a/style.css
+++ b/style.css
@@ -141,18 +141,6 @@ nav ul li:last-child {
   font-weight: bold;
 }
 
-.fourth-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-gap: 12px;
-}
-
-.fourth-container article {
-  width:  100%;
-  margin-left: 2rem;
-  padding-top: 2rem;
-}
 .blue-section {
   background-color: rgba(51, 51, 51, 0.7);
   text-align: center;
@@ -162,25 +150,31 @@ nav ul li:last-child {
   padding-top: 60px;
   color: white;
 }
+
 .blue-section h2 {
   text-align: center;
   font-size:10px;
   margin-bottom: 30px;
   
 }
+
 .blue-section h1 {
   font-size: 40px;
   margin-bottom: 30px;
   background-color: rgba(51, 51, 51, 0.5);
   text-align: center;
 }
+
 .blue-section  p {
   margin-bottom: 30px;
   background-color: rgba(51, 51, 51, 0.3);
 }
+
 .blue-section img {
   width: 50%;
+  padding-bottom: 40px;
 }
+
 .blue-section button {
   margin-bottom: 10px;
   background-color: rgba(51, 51, 51, 0.6);
@@ -191,7 +185,91 @@ nav ul li:last-child {
   color: white;
   font-weight: bold;
 }
+
+.people-section {
+  padding: 40px;
+}
+
+.main-section {
+  display: flex;
+}
+
+.main-profile {
+  height: 150px;
+  margin-right: 30px;
+  width: 400px;
+  border: 2px solid #344;
+  border-radius: 5px;
+  background-color: #666;
+}
+
+.main-section h3 {
+  font-weight: 100;
+  font-family: serif;
+  background-color: #ccc;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+
+.main-section p {
+  background-color: rgba(51, 51, 51, 0.4);
+  line-height: 2;
+}
+
 .other-section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 30px;
+  margin-top: 40px;
+}
+
+.other-section div span {
+  font-size: 17px;
+  font-weight: 400;
+  margin: 13px 0;
+  background-color: #ccc;
+  width: fit-content;
+  margin-left: 90px;
+  display: inline-block;
+}
+
+.other-section div h3 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  background-color: #888;
+  width: fit-content;
+  margin-left: 90px;
+}
+
+.other-section div p {
+  background-color: rgba(51, 51, 51, 0.3);
+  font-size: 18px;
+}
+
+.profile {
+  display: flex;
+  flex-direction: column;
+}
+
+.other-profile {
+  width: 78px;
+  height: 59px;
+  border: 2px solid #444;
+  background-color: #ccc;
+  border-radius: 4px;
+  margin-bottom: -74px;
+  display: inline-block;
+}
+
+.sixth-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 20px;
+  padding: 30px;
+}
+
+.sixth-container div {
+  border: 2px solid #ccc;
+  border-radius: 15px;
+  padding: 20px;
 }
