--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   list-style: none;
-  font-family: sans-serif;
 }
 
 a {
@@ -14,6 +13,10 @@ ul {
   list-style: none;
 }
 
+body {
+  font-family: 'Rubik', sans-serif;
+}
+
 nav {
   padding: 30px;
   width: 100%;
@@ -22,14 +25,9 @@ nav {
 
 nav ul {
   display: flex;
-  max-width: 800px;
+  max-width: 100%;
   justify-content: space-around;
-}
-
-nav ul li:last-child {
-  background-color: rgba(51, 51, 51, 0.8);
-  padding: 0 30px;
-  color: white;
+  font-size: 1.24rem;
 }
 
 .first-container {
@@ -42,11 +40,21 @@ nav ul li:last-child {
 .title {
   font-weight: bold;
   position: absolute;
-  top: 10vh;
-  /* right: 25%; */
+  top: 17vh;
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+footer h1 {
+  font-size: 18px;
+  text-align: center;
+  padding-bottom: 20px;
+  padding-top: 50px;
+}
+
+footer p {
+  padding-bottom: 20px;
 }
 
 .title h1 {
@@ -58,22 +66,6 @@ nav ul li:last-child {
   padding-top: 100px;
   padding-right: 20px;
   padding-left: 20px;
-}
-
-.first-container article:nth-child(2) {
-  background-color: rgba(51, 51, 51, 0.6);
-}
-
-.first-container article:nth-child(3) {
-  background-color: rgba(51, 51, 51, 0.5);
-}
-
-.first-container article:nth-child(4) {
-  background-color: rgba(51, 51, 51, 0.55);
-}
-
-.first-container article:last-child {
-  background-color: rgba(51, 51, 51, 0.4);
 }
 
 .second-container {
@@ -88,10 +80,6 @@ nav ul li:last-child {
   padding-left: 20px;
   padding-right: 20px;
   background-color: rgba(51, 51, 51, 0.3);
-}
-
-.second-container article h1 {
-  padding: 10px 0;
 }
 
 .second-container article:hover {
@@ -142,7 +130,7 @@ nav ul li:last-child {
 }
 
 .blue-section {
-  background-color: rgba(51, 51, 51, 0.7);
+  background-color: rgba(51, 51, 51, 0.4);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -153,19 +141,11 @@ nav ul li:last-child {
 
 .blue-section h2 {
   text-align: center;
-  font-size:10px;
+  font-size: 10px;
   margin-bottom: 30px;
-  
 }
 
-.blue-section h1 {
-  font-size: 40px;
-  margin-bottom: 30px;
-  background-color: rgba(51, 51, 51, 0.5);
-  text-align: center;
-}
-
-.blue-section  p {
+.blue-section p {
   margin-bottom: 30px;
   background-color: rgba(51, 51, 51, 0.3);
 }
@@ -241,11 +221,6 @@ nav ul li:last-child {
   margin-left: 90px;
 }
 
-.other-section div p {
-  background-color: rgba(51, 51, 51, 0.3);
-  font-size: 18px;
-}
-
 .profile {
   display: flex;
   flex-direction: column;
@@ -273,15 +248,18 @@ nav ul li:last-child {
   border-radius: 15px;
   padding: 20px;
 }
+
 .sixth-container h1 {
-margin-bottom: 20px;
-background-color: rgba(51, 51, 51, 0.3);
+  margin-bottom: 20px;
+  background-color: rgba(51, 51, 51, 0.3);
 }
+
 .sixth-container p {
   margin-bottom: 20px;
   font-size: 18px;
   background-color: rgba(51, 51, 51, 0.2);
 }
+
 .sixth-container button {
   margin-bottom: 20px;
   background-color: rgba(51, 51, 51, 0.6);
@@ -292,48 +270,95 @@ background-color: rgba(51, 51, 51, 0.3);
   color: white;
   font-weight: bold;
 }
+
 .newsletter-container {
   background-color: #ccc;
 }
+
 .newsletter-container img {
   width: 50%;
   margin-left: 30%;
 }
+
 .email-btn {
-  border:  0; 
+  border: 0;
 }
+
 .email-btn button {
- width: 70px;
- height: 5rem;
+  width: 70px;
+  height: 5rem;
 }
+
 .email-btn input {
   background-color: rgba(218, 212, 212, 0.2);
   width: 10rem;
   height: 5rem;
-  margin-left: 2rem ;
- }
+  margin-left: 2rem;
+}
+
+.other-section div p {
+  background-color: rgba(51, 51, 51, 0.3);
+  font-size: 18px;
+}
+
+.second-container article h1 {
+  padding: 10px 0;
+}
+
+nav ul li:first-child img {
+  padding: 0;
+  align-self: flex-end;
+  width: 10em;
+}
+
 footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #cccc;
-}
-footer h1 {
-  font-size: 18px;
+  background-color: #999;
   text-align: center;
-  padding-bottom: 20px;
-  padding-top: 50px;
+  padding-bottom: 30px;
+  padding-top: 20px;
+  color: white;
 }
+
 footer ul {
   display: flex;
   padding-bottom: 20px;
-  
-}
-footer li {
-  padding-left: 30px;
-  padding-right: 30px ;
+  justify-content: center;
 }
 
-footer p {
-  padding-bottom: 20px;
+footer li {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+footer a {
+  color: white;
+  font-size: 23px;
+  font-family: serif;
+}
+
+nav ul li:last-child {
+  background-color: rgba(51, 51, 51, 0.8);
+  padding: 0 30px;
+  color: white;
+  width: fit-content;
+  height: fit-content;
+}
+
+.first-container article:nth-child(2) {
+  background-color: rgba(51, 51, 51, 0.6);
+}
+
+.first-container article:nth-child(3) {
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
+.first-container article:nth-child(4) {
+  background-color: rgba(51, 51, 51, 0.55);
+}
+
+.first-container article:last-child {
+  background-color: rgba(51, 51, 51, 0.4);
 }
