--- a/style.css
+++ b/style.css
@@ -31,19 +31,41 @@ nav ul {
 }
 
 .first-container {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 80vh;
+  height: 100vh;
   grid-template-rows: repeat(2, 1fr);
 }
 
 .title {
   font-weight: bold;
   position: absolute;
-  top: 17vh;
+  top: 0;
   width: 100%;
   display: flex;
   justify-content: center;
+}
+
+.profile-section {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.p-placeholder {
+  width: 50px;
+  height: 50px;
+  background-color: #ccc;
+  border-radius: 4px;
+  border: 2px solid #444;
+}
+
+.profile-section p {
+  align-self: center;
+  font-size: 17px;
+  padding-left: 10px;
+  font-weight: 500;
 }
 
 footer h1 {
@@ -51,10 +73,6 @@ footer h1 {
   text-align: center;
   padding-bottom: 20px;
   padding-top: 50px;
-}
-
-footer p {
-  padding-bottom: 20px;
 }
 
 .title h1 {
@@ -79,7 +97,9 @@ footer p {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: rgba(51, 51, 51, 0.3);
+  padding-bottom: 20px;
+  background-color: rgba(51, 51, 51, 0.1);
+  height: 40vh;
 }
 
 .second-container article:hover {
@@ -172,6 +192,9 @@ footer p {
 
 .main-section {
   display: flex;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: #cccccc4f;
 }
 
 .main-profile {
@@ -181,6 +204,43 @@ footer p {
   border: 2px solid #344;
   border-radius: 5px;
   background-color: #666;
+}
+
+.main-add {
+  height: 40vh;
+  background-color: #ddd;
+  padding: 40px;
+}
+
+.foot-links {
+  margin-top: 30px;
+  font-family: serif;
+  font-size: 18px;
+}
+
+.main-add h2 {
+  font-size: 3rem;
+  background-color: #999;
+  margin-bottom: 20px;
+  width: fit-content;
+}
+
+.main-add button {
+  margin-bottom: 20px;
+  background-color: #666;
+  border: 0;
+  padding: 20px 30px;
+  font-size: 23px;
+  border-radius: 15px;
+  color: white;
+  font-weight: bold;
+}
+
+.main-add p {
+  font-size: 20px;
+  background-color: #ccc;
+  width: fit-content;
+  margin-bottom: 20px;
 }
 
 .main-section h3 {
@@ -201,6 +261,12 @@ footer p {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 30px;
   margin-top: 40px;
+}
+
+.other-section > div {
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #cccccc4f;
 }
 
 .other-section div span {
@@ -238,7 +304,7 @@ footer p {
 
 .sixth-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   padding: 30px;
 }
@@ -258,6 +324,10 @@ footer p {
   margin-bottom: 20px;
   font-size: 18px;
   background-color: rgba(51, 51, 51, 0.2);
+}
+
+.foot-links p {
+  padding-bottom: 20px;
 }
 
 .sixth-container button {
@@ -302,13 +372,21 @@ footer p {
 }
 
 .second-container article h1 {
-  padding: 10px 0;
+  padding: 0;
+  width: fit-content;
+  margin-bottom: 20px;
+  background-color: #888;
 }
 
 nav ul li:first-child img {
   padding: 0;
   align-self: flex-end;
   width: 10em;
+}
+
+.foot-links p:first-child {
+  font-style: italic;
+  font-size: 17px;
 }
 
 footer {
@@ -335,7 +413,7 @@ footer li {
 
 footer a {
   color: white;
-  font-size: 23px;
+  font-size: 27px;
   font-family: serif;
 }
 
